update main text

--- a/header.tex
+++ b/header.tex
@@ -135,4 +135,5 @@ urlcolor=[rgb]{.09 .29 .54}}
 \def\adj{\mathrm{adj}}
 \def\wprod{\mathbf{wp}}
 \def\length{\mathbf{len}}
+\def\connectivity{\mathrm{d}}
 %% END MACROS SECTION
