--- a/tex/figures.tex
+++ b/tex/figures.tex
@@ -9,7 +9,7 @@
 \begin{figure}[!ht]
 \centering
 \noindent\includegraphics[width=0.7\columnwidth]{fig/scc.pdf}
-\caption{{\bf Example of strongly connected components.} (A) - (D) show strongly connected components highlighted in gray for each of the four graphs representing the interdependencies relevant to four different three component systems. Note that the most hierarchical system in (A) has the highest possible number of connected components, three, whereas the system containing a single cycle and therefore posessing no hierarchy contains only one connected component. Systems (B) and (D) represent examples of hierarchical modular systems that posess both modularity and hierarchy.}
+\caption{{\bf Example of strongly connected components.} (A) - (D) show strongly connected components highlighted in gray for each of the four graphs representing the interdependencies relevant to four different three component systems. Note that the most hierarchical system in (A) has the highest possible number of connected components, three, whereas the system containing a single cycle and therefore posessing no hierarchy contains only one connected component. Systems (B) and (C) represent examples of hierarchical modular systems that posess both modularity and hierarchy.}
 \label{fig:scc}
 \end{figure}
 
