compute graph edit distance and combine figures

--- a/paper.tex
+++ b/paper.tex
@@ -549,6 +549,7 @@ in $\hier^{-1} (\hier(a))$.  Hence, our sum decomposes into partial sums
 for the fibers of the points in the hierarchy which corresponds to a
 factorization of the characteristic polynomial.
 
+\input{tex/figuressupp}
 
 \end{document}
 
