--- a/tex/tablenographs.tex
+++ b/tex/tablenographs.tex
@@ -1,162 +1,162 @@
 %!TEX root = ../paper.tex
-\begin{longtable}{ c | c || c | c | c | c }
+\begin{longtable}{ c | c || c | c | c | c | c }
 \hline
-matrix & \specialcell{orbit\\size} & connectivity & \specialcell{cycle\\number} & \specialcell{probability of stability\\to perturbation} & \specialcell{probability\\of stability}\\
+matrix & \specialcell{orbit\\size} & connectivity & \specialcell{edit\\distance} & \specialcell{cycle\\number} & \specialcell{probability of stability\\to perturbation} & \specialcell{probability\\of stability}\\
 \hline
 $\begin{pmatrix}
 1 & 0 & 0\\
 0 & 1 & 0\\
 0 & 0 & 1\\
-\end{pmatrix}$ & 1 & 3 & 0 & 0.499 & 0.126\\
+\end{pmatrix}$ & 1 & 3 & 3 & 0 & 0.499 & 0.126\\
 $\begin{pmatrix}
 0 & 0 & 1\\
 0 & 1 & 0\\
 1 & 0 & 1\\
-\end{pmatrix}$ & 6 & 4 & 1 & 0.505 & 0.121\\
+\end{pmatrix}$ & 6 & 4 & 4 & 1 & 0.505 & 0.121\\
 $\begin{pmatrix}
 1 & 0 & 0\\
 0 & 1 & 1\\
 0 & 0 & 1\\
-\end{pmatrix}$ & 6 & 4 & 0 & 0.622 & 0.127\\
+\end{pmatrix}$ & 6 & 4 & 2 & 0 & 0.622 & 0.127\\
 $\begin{pmatrix}
 0 & 0 & 1\\
 0 & 1 & 1\\
 1 & 0 & 1\\
-\end{pmatrix}$ & 12 & 5 & 1 & 0.595 & 0.121\\
+\end{pmatrix}$ & 12 & 5 & 3 & 1 & 0.595 & 0.121\\
 $\begin{pmatrix}
 0 & 0 & 1\\
 0 & 1 & 1\\
 1 & 1 & 0\\
-\end{pmatrix}$ & 6 & 5 & 2 & 0.494 & 0.128\\
+\end{pmatrix}$ & 6 & 5 & 5 & 2 & 0.494 & 0.128\\
 $\begin{pmatrix}
 0 & 1 & 1\\
 0 & 0 & 1\\
 1 & 0 & 1\\
-\end{pmatrix}$ & 12 & 5 & 2 & 0.41 & 0.061\\
+\end{pmatrix}$ & 12 & 5 & 3 & 2 & 0.41 & 0.061\\
 $\begin{pmatrix}
 0 & 1 & 0\\
 0 & 1 & 1\\
 1 & 0 & 1\\
-\end{pmatrix}$ & 6 & 5 & 1 & 0.43 & 0.078\\
+\end{pmatrix}$ & 6 & 5 & 3 & 1 & 0.43 & 0.078\\
 $\begin{pmatrix}
 0 & 1 & 1\\
 0 & 1 & 0\\
 1 & 0 & 1\\
-\end{pmatrix}$ & 12 & 5 & 1 & 0.605 & 0.12\\
+\end{pmatrix}$ & 12 & 5 & 3 & 1 & 0.605 & 0.12\\
 $\begin{pmatrix}
 0 & 1 & 1\\
 0 & 1 & 1\\
 1 & 0 & 0\\
-\end{pmatrix}$ & 6 & 5 & 2 & 0.405 & 0.06\\
+\end{pmatrix}$ & 6 & 5 & 3 & 2 & 0.405 & 0.06\\
 $\begin{pmatrix}
 1 & 0 & 1\\
 0 & 1 & 1\\
 0 & 0 & 1\\
-\end{pmatrix}$ & 6 & 5 & 0 & 0.698 & 0.122\\
+\end{pmatrix}$ & 6 & 5 & 1 & 0 & 0.698 & 0.122\\
 $\begin{pmatrix}
 1 & 0 & 0\\
 0 & 1 & 1\\
 0 & 1 & 1\\
-\end{pmatrix}$ & 3 & 5 & 1 & 0.587 & 0.128\\
+\end{pmatrix}$ & 3 & 5 & 3 & 1 & 0.587 & 0.128\\
 $\begin{pmatrix}
 1 & 0 & 1\\
 0 & 1 & 0\\
 0 & 1 & 1\\
-\end{pmatrix}$ & 6 & 5 & 0 & 0.707 & 0.127\\
+\end{pmatrix}$ & 6 & 5 & 1 & 0 & 0.707 & 0.127\\
 $\begin{pmatrix}
 0 & 0 & 1\\
 0 & 1 & 1\\
 1 & 1 & 1\\
-\end{pmatrix}$ & 6 & 6 & 2 & 0.578 & 0.121\\
+\end{pmatrix}$ & 6 & 6 & 4 & 2 & 0.578 & 0.121\\
 $\begin{pmatrix}
 0 & 1 & 1\\
 0 & 0 & 1\\
 1 & 1 & 1\\
-\end{pmatrix}$ & 6 & 6 & 3 & 0.487 & 0.081\\
+\end{pmatrix}$ & 6 & 6 & 4 & 3 & 0.487 & 0.081\\
 $\begin{pmatrix}
 0 & 1 & 1\\
 0 & 1 & 1\\
 1 & 0 & 1\\
-\end{pmatrix}$ & 12 & 6 & 2 & 0.543 & 0.098\\
+\end{pmatrix}$ & 12 & 6 & 2 & 2 & 0.543 & 0.098\\
 $\begin{pmatrix}
 0 & 1 & 0\\
 0 & 1 & 1\\
 1 & 1 & 1\\
-\end{pmatrix}$ & 6 & 6 & 2 & 0.501 & 0.088\\
+\end{pmatrix}$ & 6 & 6 & 2 & 2 & 0.501 & 0.088\\
 $\begin{pmatrix}
 0 & 1 & 1\\
 0 & 1 & 0\\
 1 & 1 & 1\\
-\end{pmatrix}$ & 12 & 6 & 1 & 0.662 & 0.123\\
+\end{pmatrix}$ & 12 & 6 & 2 & 1 & 0.662 & 0.123\\
 $\begin{pmatrix}
 0 & 1 & 1\\
 0 & 1 & 1\\
 1 & 1 & 0\\
-\end{pmatrix}$ & 12 & 6 & 3 & 0.467 & 0.079\\
+\end{pmatrix}$ & 12 & 6 & 4 & 3 & 0.467 & 0.079\\
 $\begin{pmatrix}
 0 & 1 & 1\\
 1 & 1 & 0\\
 1 & 0 & 1\\
-\end{pmatrix}$ & 3 & 6 & 2 & 0.583 & 0.13\\
+\end{pmatrix}$ & 3 & 6 & 4 & 2 & 0.583 & 0.13\\
 $\begin{pmatrix}
 1 & 0 & 1\\
 0 & 1 & 1\\
 0 & 1 & 1\\
-\end{pmatrix}$ & 12 & 6 & 1 & 0.659 & 0.124\\
+\end{pmatrix}$ & 12 & 6 & 2 & 1 & 0.659 & 0.124\\
 $\begin{pmatrix}
 1 & 1 & 1\\
 0 & 1 & 1\\
 0 & 0 & 1\\
-\end{pmatrix}$ & 6 & 6 & 0 & 0.751 & 0.124\\
+\end{pmatrix}$ & 6 & 6 & 0 & 0 & 0.751 & 0.124\\
 $\begin{pmatrix}
 1 & 1 & 0\\
 0 & 1 & 1\\
 1 & 0 & 1\\
-\end{pmatrix}$ & 2 & 6 & 1 & 0.604 & 0.097\\
+\end{pmatrix}$ & 2 & 6 & 2 & 1 & 0.604 & 0.097\\
 $\begin{pmatrix}
 0 & 1 & 1\\
 0 & 1 & 1\\
 1 & 1 & 1\\
-\end{pmatrix}$ & 12 & 7 & 3 & 0.564 & 0.103\\
+\end{pmatrix}$ & 12 & 7 & 3 & 3 & 0.564 & 0.103\\
 $\begin{pmatrix}
 0 & 1 & 1\\
 1 & 0 & 1\\
 1 & 1 & 1\\
-\end{pmatrix}$ & 3 & 7 & 5 & 0.475 & 0.068\\
+\end{pmatrix}$ & 3 & 7 & 5 & 5 & 0.475 & 0.068\\
 $\begin{pmatrix}
 0 & 1 & 1\\
 1 & 1 & 1\\
 1 & 0 & 1\\
-\end{pmatrix}$ & 6 & 7 & 3 & 0.591 & 0.108\\
+\end{pmatrix}$ & 6 & 7 & 3 & 3 & 0.591 & 0.108\\
 $\begin{pmatrix}
 1 & 1 & 1\\
 0 & 1 & 1\\
 0 & 1 & 1\\
-\end{pmatrix}$ & 6 & 7 & 1 & 0.717 & 0.119\\
+\end{pmatrix}$ & 6 & 7 & 1 & 1 & 0.717 & 0.119\\
 $\begin{pmatrix}
 1 & 0 & 1\\
 0 & 1 & 1\\
 1 & 1 & 1\\
-\end{pmatrix}$ & 3 & 7 & 2 & 0.648 & 0.122\\
+\end{pmatrix}$ & 3 & 7 & 3 & 2 & 0.648 & 0.122\\
 $\begin{pmatrix}
 1 & 1 & 1\\
 0 & 1 & 1\\
 1 & 0 & 1\\
-\end{pmatrix}$ & 6 & 7 & 2 & 0.627 & 0.105\\
+\end{pmatrix}$ & 6 & 7 & 1 & 2 & 0.627 & 0.105\\
 $\begin{pmatrix}
 0 & 1 & 1\\
 1 & 1 & 1\\
 1 & 1 & 1\\
-\end{pmatrix}$ & 3 & 8 & 5 & 0.577 & 0.093\\
+\end{pmatrix}$ & 3 & 8 & 4 & 5 & 0.577 & 0.093\\
 $\begin{pmatrix}
 1 & 1 & 1\\
 0 & 1 & 1\\
 1 & 1 & 1\\
-\end{pmatrix}$ & 6 & 8 & 3 & 0.639 & 0.109\\
+\end{pmatrix}$ & 6 & 8 & 2 & 3 & 0.639 & 0.109\\
 $\begin{pmatrix}
 1 & 1 & 1\\
 1 & 1 & 1\\
 1 & 1 & 1\\
-\end{pmatrix}$ & 1 & 9 & 5 & 0.638 & 0.106\\
+\end{pmatrix}$ & 1 & 9 & 3 & 5 & 0.638 & 0.106\\
 \caption{{\bf Probability of stability under resampling and \emph{a priori} stability for three component systems estimated via Monte Carlo sampling.} All matrices not listed have $0$ probability of stability.}\label{tab:structstabmat3}
 \end{longtable}
